--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -15,6 +15,7 @@ tags: 笔记
 - [C++中class与struct的区别](#list_3)
 - [C++虚函数和纯虚函数](#list_4)
 - [C++的动态绑定的概念](#list_7)
+- [虚函数是如何实现多态机制](#list_16)
 - [inline可以用虚函数实现吗？](#list_5)
 - [函数调用入栈顺序](#list_6)
 - [友元类友元函数](#list_8)
@@ -25,6 +26,9 @@ tags: 笔记
 - [strcpy和memcpy区别](#list_13)
 - [memcpy和memmove区别](#list_14)
 - [#define与typedef](#list_15)
+- [面向实现和面向接口编程区别](#list_17)
+- [C++const的使用](#list_18)
+- [#define dosomething do {xxx} while(0)宏定义的目的](#list_19)
 
 --- 
 
@@ -187,6 +191,10 @@ int main(){
 - 静态绑定：`编译时`绑定，通过`对象`调用
 - 动态绑定：`运行时`绑定，通过`地址`实现  
 只有采用“指针->函数()”或“引用变量.函数()”方式调用C++类中的虚函数才会执行动态绑定，因此`非虚函数不存在动态绑定`。
+
+### <span id = "list_16"></span>
+
+多态机制的实现主要是通过子类重写基类的虚函数来实现的，而虚函数的实现机制则是通过一张虚函数表（<https://blog.csdn.net/qican_7/article/details/100603461>）。如果一个`类有虚函数`，那么这个类的`实例化对象的内存首地址`就是虚函数表的地址，每个对象都有一个指针指向这个虚函数表。程序运行的时候，`基类指针`根据所指向的不同对象的虚函数表动态的选择所要运行的函数，从而实现多态性。  
 
 ### <span id = "list_5"></span>inline可以用虚函数实现吗  
   
@@ -391,6 +399,193 @@ typedef int f();//拿掉后声明了函数f，f拿来作为新类型（无参数
 typedef int g(int);//拿掉后声明了带int参数的函数g，g拿来作为新类型（带一个int参数返回值int的函数类型g） 
 typedef void(*func)(void);//拿掉后声明了一个无返回值无参的函数指针func  
 
+### <span id = "list_17"></span>面向实现和面向接口编程区别  
 
-虚函数如何实现多态机制  
-https://blog.csdn.net/qican_7/article/details/100603461
+1. 面向实现编程：把所有的逻辑`代码全部写在一起`，代码耦合度高并且不能够实现多态  
+2. 面向接口编程：系统设计者设计出一套方法让`各自去实现`，就像在C++中子类去实现虚基类（抽象类）的虚函数一样，纯虚函数就是一个接口让各自的子类去实现，这样做代码耦合度低，便于扩展有利于实现多态。
+
+### <span id = "list_18"></span>C++const的使用（良好习惯：常量定义为大写字母）  
+
+const常量（constant，不变的，不易改变），常量是固定值，又叫字面量（简单理解就是字面的意思）。  
+定义常量的方式有两种：  
+- 使用#define`预处理器`（预处理器做简单的文本替换就是文本字面的值）
+- 使用const`关键字`（编译过程实现）  
+
+```cpp
+void main(){
+	const int a = 7;
+	int *p = (int *)&a; //强制转化，未转化编译器报错
+	*p = 8;
+	std::cout << a << " " << *p << std::endl;
+}
+输出结果：
+7 8
+
+```  
+
+```cpp
+void main(){
+	volatile const int a = 7; //volatile与const相反表示可变的
+	int *p = (int *)&a; //强制转化，未转化编译器报错
+	*p = 8;
+	std::cout << a << " " << *p << std::endl;
+}
+输出结果：
+8 8
+
+```
+
+1. 定义常量：“const 数据类型 NAME = val;” 和 “数据类型 const NAME = val;”等价，数据类型的变量NAME都不可改变
+
+2. 指针使用const（`const在谁前面谁就是常量`）
+    - 指针常量（指针的常量，修饰指针，指针不能变）：int * const p = &a;表示指针p是一个常量不可改变
+    - 常量指针（常量的指针，修饰常量，指针可以变）：const int *p = &a;表示p指向一个常量
+    - 指向常量的指针常量（指针不变且指向的常量也不变）：const int * const p = &a;表示p是一个指针，指向的a是一个常量
+
+3. 函数const（参数const和返回值const）  
+    - 函数参数const
+        -  void print (const int a); //a在函数体print内不能被修改
+        -  void print (int *const a); //指针a在函数体print内不能重赋值
+        -  自定义类型的参数传递，需要临时对对象复制参数，对于临时对象的复制，需要调用构造函数，比较浪费时间，因此采用const外加引用传递的方式。  
+    - 函数返回值const
+        - const int print();  //修饰内置类型与不修饰作用一致
+        - const Custom-Type print(); //修饰自定义类型Custom-Type作为返回值，此时返回值不能被赋值也不能被修改
+        - const修饰返回的指针或者引用，是否返回一个指向const的指针，取决于我们想让用户做什么
+
+```cpp
+#include<iostream>
+#include<string.h>
+
+struct B {
+	int today;
+};
+
+class A {
+public:
+	A(int data) {
+		this->data = data;
+	}
+
+	int getData() const {  //此处在print常量引用中用到需const函数
+		return data;
+	}
+
+	int getData2() {  //此处暂无其它常量引用调用到无需const函数
+		return data * 2;
+	}
+private:
+	int data;
+};
+
+void print(const A & a) {
+	std::cout << a.getData() << std::endl;
+}
+
+const B printB() {
+	B b;
+	b.today = 22;
+	return b;
+}
+
+int main() {
+	A a(11);
+	a.getData();
+	print(a);
+	
+	//printB().today = 21; //错误，返回值B是const的
+	int c = printB().today; //正常
+
+	getchar();
+	return 0;
+}
+
+```  
+4. const修饰类成员函数
+
+const修饰成员函数表示`不允许修改类的成员变量`。  
+void print() const; //const放到函数最后，防止被调用对象修改调用对象的值，如果我们`不想修改一个调用对象的值，所有成员函数都应当声明为const成员函数`。（**此处const和static不能同时使用，static修饰的成员函数是没有this指针的，即不能被实例化,被看做是一个全局函数，`const成员函数必须具体到某一具体实例`）
+
+```cpp
+#include<iostream>
+#include<string.h>
+
+class A{
+public:
+    void print() const {
+        ++dataA;  //错误，print是const固不能修改A的成员数据
+        ++dataB;  //正常，dataB被mutable（易变，容易改变）修饰后可被修改
+    }
+private:
+    int dataA;
+    mutable int dataB; //mutable修饰
+};
+
+int main(){
+    return 0;
+}
+
+```  
+
+### <span id = "list_19"></span>#define dosomething do {xxx} while(0)宏定义的目的  
+
+<https://blog.csdn.net/tianxieeryang/article/details/86687065>  
+
+“#define”宏预处理时纯粹的文本替换，但当出现多行时候会出现语句块问题，while(0)保证包裹的语句块能正常运行  
+
+```cpp
+#include<iostream>
+
+#define PI 3.141592
+#define MIN(a,b) (a < b ? a : b)
+#define ERRO(msg) #msg
+#define ERRO2(x,y) x ## y
+#define func() do {print1();print2();} while(0)
+
+void print1(){
+    std::cout << "print1" << std::endl;
+}
+
+void print2(){
+    std::cout << "print2" << std::endl;
+}
+
+int main(){
+    std::cout << PI << std::endl;
+    std::cout << MIN(5,6) << std::endl;
+
+    std::cout << ERRO(this is erro msg) << std::endl; //将括号内内容转成字符串显示
+    int xy = 123;
+    std::cout << ERRO2(x,y) << std::endl;  //将括号内的参数拼接成一个字符串
+
+    if(1)
+        func();  //若不是dosomething do {xxx} while(0)包裹的，此处if(1)语句块只有"print1()"
+
+    return 0;
+}
+
+
+//以上代码预处理后的结果
+void print1(){
+ std::cout << "print1" << std::endl;
+}
+
+void print2(){
+ std::cout << "print2" << std::endl;
+}
+
+int main(){
+ std::cout << 3.141592 << std::endl;
+ std::cout << (5 < 6 ? 5 : 6) << std::endl;
+
+ std::cout << "this is erro msg" << std::endl;
+ int xy = 123;
+ std::cout << xy << std::endl;
+
+ if(1)
+  do {print1();print2();} while(0);  //块
+
+ return 0;
+}
+
+```
+
