--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -15,11 +15,11 @@ tags: 笔记
 - [C++中class与struct的区别](#list_3)
 - [C++虚函数和纯虚函数](#list_4)
 - [C++的动态绑定的概念](#list_7)
-- [虚函数是如何实现多态机制](#list_16)
 - [inline可以用虚函数实现吗？](#list_5)
 - [函数调用入栈顺序](#list_6)
 - [友元类友元函数](#list_8)
 - [C++多态的概念和实现机制](#list_9)
+- [虚函数是如何实现多态机制](#list_16)
 - [堆栈的区别](#list_10)
 - [sizeof和strlen区别](#list_11)
 - [C的malloc和C++的new的区别](#list_12) 
@@ -192,7 +192,7 @@ int main(){
 - 动态绑定：`运行时`绑定，通过`地址`实现  
 只有采用“指针->函数()”或“引用变量.函数()”方式调用C++类中的虚函数才会执行动态绑定，因此`非虚函数不存在动态绑定`。
 
-### <span id = "list_16"></span>
+### <span id = "list_16"></span>虚函数是如何实现多态机制  
 
 多态机制的实现主要是通过子类重写基类的虚函数来实现的，而虚函数的实现机制则是通过一张虚函数表（<https://blog.csdn.net/qican_7/article/details/100603461>）。如果一个`类有虚函数`，那么这个类的`实例化对象的内存首地址`就是虚函数表的地址，每个对象都有一个指针指向这个虚函数表。程序运行的时候，`基类指针`根据所指向的不同对象的虚函数表动态的选择所要运行的函数，从而实现多态性。  
 
