--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -29,6 +29,7 @@ tags: 笔记
 - [面向实现和面向接口编程区别](#list_17)
 - [C++const的使用](#list_18)
 - [#define dosomething do {xxx} while(0)宏定义的目的](#list_19)
+- [为什么析构函数不能抛出异常？](#list_20)
 
 --- 
 
@@ -589,3 +590,184 @@ int main(){
 
 ```
 
+### <span id = "list_20"></span>为什么析构函数不能抛出异常？  
+
+#### c++异常  
+
+
+<https://blog.51cto.com/9291927/2164586>  
+<https://www.runoob.com/cplusplus/cpp-exceptions-handling.html>  
+
+1. 函数的异常声明规格说明：  
+void func(); //默认情况，可能抛出任何异常  
+void func()throw(char,int);//自定义抛出异常的类型：char，int  
+void func()throw();//不抛出任何异常  
+
+```cpp
+#include <iostream>
+#include <string>
+
+using namespace std;
+//声明抛出的异常类型为int,char,string
+void func(int i, int j)throw(int,char,string)
+{
+    if(0 < j && j < 10)
+    {
+        throw j;
+    }
+    if(10 < j && j < 100)
+    {
+        throw 'A';
+    }
+    else
+    {
+        throw string("string exception.");
+    }
+}
+
+void test(int i)try  //test声明时候的异常处理，此处是声明不是定义
+{
+    func(i,i);
+}
+catch(int i)
+{
+    cout << "catch(int i): " << i << endl;
+}
+catch(char c)
+{
+    cout << "Exception:" << c << endl;
+}
+catch(string s)
+{
+    cout << s << endl;
+}
+catch(...)
+{
+    cout << "Exception:" << endl;
+}
+
+int main(int argc, char *argv[])
+{
+    test(115);//string exception.
+    test(1);//catch(int i): 1
+    test(20);//Exception:A
+    return 0;
+}
+```  
+2. 异常匹配自上而下严格匹配（按逻辑顺序从上往下匹配，若有派生类和基类都抛出异常，必须把派生类的异常放到前面，以定位正确的抛出异常位置）
+
+```cpp  
+#include<iostream>
+#include<exception>
+
+class A{
+};
+
+class B:public A{
+public:
+    void print() const{ //存在常量引用此处函数需const
+        std::cout << "print exception of B" << std::endl;
+    }
+};
+
+int main(){
+    try{
+        B b;
+        throw b;
+    }
+    catch(const B& e){ //异常自上而下严格匹配，所以此处需先catch子类
+        std::cout << "exception child" << std::endl;
+        e.print();
+    }
+    catch(const A& e){
+        std::cout << "exception parent" << std::endl;
+    }
+
+    return 0;
+}
+```
+
+3. 自定义异常
+
+通过继承和重载exception类定义新的异常，what()是异常类提供的公共方法，返回异常产生的信息（char*类型）
+
+```cpp  
+#include<iostream>
+#include<exception>
+
+class NewException : public std::exception{
+public:
+    const char* what() const throw(){ //throw()是异常规格说明
+//      this->m_Data = 11; //函数被修饰为const将不能改变类成员
+        return "this is NewException";
+    }
+
+private:
+    int m_Data;
+};
+
+int main(){
+    try{
+        throw NewException();
+    }catch(NewException& e){
+        std::cout << e.what() << std::endl;
+    }
+
+    return 0;
+}
+```
+
+#### 类继承  
+
+- 一个派生类继承了`除以下外的所有`的基类方法：  
+    - 基类的构造函数、析构函数和拷贝构造函数
+    - 基类的重载操作符
+    - 基类的友元函数（非成员函数）  
+
+- 多继承（环装继承）导致基类对象创建多次，使用虚拟（virtual）继承（在创建对象的时候会创建一个虚表），此时基类对象只会创建一次。  
+
+```cpp
+#include<iostream>
+
+class A{
+public:
+    A(){
+        std::cout << "this is structure A" << std::endl;
+    }
+};
+
+class C:virtual public A{ //在此处就必须采用虚继承，若到B中才采用虚继承，同样A还是会被构造2次
+public:
+    C(){
+        std::cout << "this is structure C" << std::endl;
+    }
+};
+
+class D:virtual public A{
+public:
+    D(){
+        std::cout << "this is structure D" << std::endl;
+    }
+};
+
+class B:public C,public D{
+public:
+    B(){
+        std::cout << "this is structure B" << std::endl;
+    }
+};
+
+int main(){
+    B*b = new B();
+    delete b;
+
+    return 0;
+}
+
+```
+
+#### 为什么析构函数不能抛出异常？  
+
+1. 内存泄露：抛出异常后，析构函数没有正常执行完成，后续的释放资源的动作没有完成导致泄露。
+2. 死循环异常：异常发生时候，c++机制会调用已经构造对象的析构函数释放资源，当上一个异常没有处理时又有新异常，如此循环会导致程序崩溃。
+3. 析构函数异常处理（异常永远不抛出析构函数作用块）：把异常完全封装在析构函数内部，`不让异常抛出函数之外`。  
