--- a/_posts/2019-09-22-编程思维.md
+++ b/_posts/2019-09-22-编程思维.md
@@ -11,6 +11,7 @@ tags: 方法论
 ## 目录  
 
 - [动态规划的思想](#list_1)
+- [类兔乌龟赛跑思路](#list_2)
 
 --- 
 
@@ -18,4 +19,77 @@ tags: 方法论
 
 <https://blog.csdn.net/u013250416/article/details/80558542>  
 
-动态规划算法思想（分治思想和解决冗余）：一个问题拆解各种`更小的相似的`子问题，子问题求解获得原问题解；子问题结果保存，同子问题再次出现无需再次求解，直接引用保存的子问题结果。  
+动态规划算法思想（分治思想和解决冗余）：一个问题拆解各种`更小的相似的`子问题，子问题求解获得原问题解；子问题结果保存，同子问题再次出现无需再次求解，直接引用保存的子问题结果。
+
+### <span id = "list_2"></span>类兔乌龟赛跑思路  
+
+类兔乌龟赛跑的思路就是2个对象先后跑的问题：  
+1. 给定一个链表头结点如何判断是否有环及环的长度：    
+两个指针一个走的慢走1步，一个走的快走2步，当其中一个指向了空节点（快指针会先走到空节点）则无环，当2个指针再次相遇表示有环，且环的长度为慢指针走过的长度（有环的话必定在一倍循环相遇）  
+2. 给定一个链表，求这个链表的倒数第k个节点：  
+两个指针，第一个先走k个节点后第二个指针跟第一个同时走直到第一个节点到结束，第二个所指的就是对应的位置（需注意k节点超过链表长度），示例如下：  
+
+```cpp
+#include<iostream>
+
+struct Node{
+    int m_Data;
+    Node * p_nextNode;
+};
+
+Node* getKNode(Node * root,int k){
+    if (!root || k < 1){ return nullptr;}
+
+    Node * pFir = root;
+    Node * pKst = root;
+
+    for(int iIndex = 0;iIndex < k - 1;++iIndex){
+        if(!(pKst->p_nextNode)){
+            return nullptr;
+        }
+        pKst = pKst->p_nextNode;
+    }
+
+    while(pKst->p_nextNode){
+        pKst = pKst->p_nextNode;
+        pFir = pFir->p_nextNode;
+    }
+
+    return pFir;
+}
+
+int main(){
+    Node n5;
+    n5.m_Data = 5;
+
+    Node n4;
+    n4.m_Data = 4;
+    n4.p_nextNode = &n5;
+
+    Node n3;
+    n3.m_Data = 3;
+    n3.p_nextNode = &n4;
+    n3.p_nextNode = &n4;
+
+    Node n2;
+    n2.m_Data = 2;
+    n2.p_nextNode = &n3;
+
+    Node n1;
+    n1.m_Data = 1;
+    n1.p_nextNode = &n2;
+
+    n5.p_nextNode = nullptr;  //此处必须赋值空指针，要不上面while遍历结尾会出现访问0xCCCCCCCC（野指针）
+    Node* res = getKNode(&n1,8);
+
+    if(res){
+        std::cout << res->m_Data << std::endl;
+    }
+
+    return 0;
+}
+
+```  
+3. 给定一个链表，求这个链表的中间节点  
+
+两个指针，一个走2步一个走1步，当快的下一步是空时候（表示链表结束），慢的指针指向的即链表中间。  
