--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -30,6 +30,9 @@ tags: 笔记
 - [C++const的使用](#list_18)
 - [#define dosomething do {xxx} while(0)宏定义的目的](#list_19)
 - [为什么析构函数不能抛出异常？](#list_20)
+- [构造函数可以抛出异常？](#list_21)
+- [C++什么时候用到拷贝构造函数](#list_22)
+- [为什么拷贝构造函数的第一个参数必须是引用类型](#list_23)
 
 --- 
 
@@ -598,7 +601,7 @@ int main(){
 <https://blog.51cto.com/9291927/2164586>  
 <https://www.runoob.com/cplusplus/cpp-exceptions-handling.html>  
 
-1. 函数的异常声明规格说明：  
+1.函数的异常声明规格说明：  
 void func(); //默认情况，可能抛出任何异常  
 void func()throw(char,int);//自定义抛出异常的类型：char，int  
 void func()throw();//不抛出任何异常  
@@ -654,7 +657,8 @@ int main(int argc, char *argv[])
     return 0;
 }
 ```  
-2. 异常匹配自上而下严格匹配（按逻辑顺序从上往下匹配，若有派生类和基类都抛出异常，必须把派生类的异常放到前面，以定位正确的抛出异常位置）
+
+2.异常匹配自上而下严格匹配（按逻辑顺序从上往下匹配，若有派生类和基类都抛出异常，必须把派生类的异常放到前面，以定位正确的抛出异常位置）
 
 ```cpp  
 #include<iostream>
@@ -685,9 +689,9 @@ int main(){
 
     return 0;
 }
-```
+```  
 
-3. 自定义异常
+3.自定义异常
 
 通过继承和重载exception类定义新的异常，what()是异常类提供的公共方法，返回异常产生的信息（char*类型）
 
@@ -771,3 +775,108 @@ int main(){
 1. 内存泄露：抛出异常后，析构函数没有正常执行完成，后续的释放资源的动作没有完成导致泄露。
 2. 死循环异常：异常发生时候，c++机制会调用已经构造对象的析构函数释放资源，当上一个异常没有处理时又有新异常，如此循环会导致程序崩溃。
 3. 析构函数异常处理（异常永远不抛出析构函数作用块）：把异常完全封装在析构函数内部，`不让异常抛出函数之外`。  
+
+### <span id = "list_21"></span>构造函数可以抛出异常？  
+
+构造函数可以抛出异常。构造函数用来产生一个新对象，当抛出异常对象构造失败，此时也就`不存在调用析构函数`，会存在已经被构造出来的涉及到已经分配内存的会产生内存泄露。  
+
+### <span id = "list_22"></span>C++什么时候用拷贝构造函数  
+
+<https://blog.csdn.net/qq_22642239/article/details/94014575>
+
+int a(5);//直接初始化（调用的是构造函数，若为类不调用拷贝构造函数）  
+int a = 5;//拷贝初始化（若为类需调用拷贝构造函数）  
+
+如果类中没有拷贝构造函数，编译器会自定义一个（编译器自定义就不会对动态分配内存的做拷贝（浅拷贝），因为编译器只是简单的对数据成员进行`一一赋值`，若为指针，2个对象就指向同一个内存，当析构时会调用2次析构同一内存）。如果类`带有指针变量，并有动态内存分配，则它必须有拷贝构造函数`。构造函数的`第1个参数`是以下之一的都是拷贝构造函数：  
+- className&  
+- const className&  
+- volatile className&  
+- const volatile className&  
+
+**类可以有多个拷贝构造函数？**  
+类可以`同时存在多个不同类型`的拷贝构造函数。  
+
+**拷贝构造函数被private修饰后能访问类的成员吗？**  
+可以访问，拷贝构造函数还是构造函数，操作的还是类的成员，不受private限制。
+
+拷贝构造函数是特殊的构造函数，使用`同一类`中`之前创建的对象来初始化新创建的对象`（注意这个构造函数的参数只能是引用类型，若非引用就是无限的创建），使用场景：  
+1. 通过使用同一类型对象来`初始化新创建的对象`  
+2. `复制对象`把它作为参数传递给函数  
+3. `复制对象`并从函数返回这个对象  
+
+```cpp
+#include<iostream>
+
+class A {
+public:
+	A() {
+		ptr = new int[10];
+		std::cout << "this is default ctor" << std::endl;
+	}
+
+	A(const A& a) {
+		ptr = new int[10];
+		std::cout << "this is copy ctor" << std::endl;
+	}
+
+	~A() {
+		if (ptr) {
+			delete ptr;
+		}
+		std::cout << "this is destructor" << std::endl;
+	}
+
+	void setData() {
+		*ptr = 123;
+	}
+
+	void classPrint() {
+		std::cout << "ptr fist data " << *ptr << std::endl;
+	}
+private:
+	int *ptr;
+	//int *ptr = new int[10]; //使用这种方式在创建对象时候即做了深度拷贝，构造函数无需手动再拷贝
+};
+
+//以下参数执行了一次拷贝构造，同时函数返回值也做了一次拷贝构造
+A print(A a3) {
+	std::cout << "this is print" << std::endl;
+	return a3;
+}
+
+void test() {
+	A a1;
+	a1.setData();
+	a1.classPrint();
+
+	A a2 = a1;  //此处用一个对象赋值另一个对象，做了一次拷贝构造
+	a2.classPrint();
+
+	print(a1);
+}
+
+int main() {
+	test();
+
+	getchar();
+	return 0;
+}
+
+/*输出结果
+this is default ctor   //a1的构造
+ptr fist data 123
+this is copy ctor  //a2调用了拷贝构造
+ptr fist data -842150451  //拷贝构造只是拷贝了内存空间，值不会被拷贝（值是动态运行产生的）
+this is copy ctor  //这是print函数的参数a3的拷贝构造
+this is print
+this is copy ctor  //这是print函数的返回值的调用拷贝构造
+this is destructor
+this is destructor
+this is destructor
+this is destructor
+*/
+```  
+
+### <span id = "list_23"></span>为什么拷贝构造函数的第一个参数必须是引用类型
+
+拷贝构造函数的第1个参数必须是引用类型。假如一个对象以`值传递`的方式传入拷贝构造函数，此时参数又做了一次拷贝构造，这样将引起无限循环导致栈溢出（函数调用，变量分配内存），所以说拷贝构造函数的参数必须是引用类型。  
