--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -33,6 +33,7 @@ tags: 笔记
 - [构造函数可以抛出异常？](#list_21)
 - [C++什么时候用到拷贝构造函数](#list_22)
 - [为什么拷贝构造函数的第一个参数必须是引用类型](#list_23)
+- [overload与override区别](#list_24)
 
 --- 
 
@@ -198,7 +199,7 @@ int main(){
 
 ### <span id = "list_16"></span>虚函数是如何实现多态机制  
 
-多态机制的实现主要是通过子类重写基类的虚函数来实现的，而虚函数的实现机制则是通过一张虚函数表（<https://blog.csdn.net/qican_7/article/details/100603461>）。如果一个`类有虚函数`，那么这个类的`实例化对象的内存首地址`就是虚函数表的地址，每个对象都有一个指针指向这个虚函数表。程序运行的时候，`基类指针`根据所指向的不同对象的虚函数表动态的选择所要运行的函数，从而实现多态性。  
+多态机制的实现主要是通过子类重写基类的虚函数来实现的，而虚函数的实现机制则是通过一张虚函数表（<https://blog.csdn.net/qican_7/article/details/100603461>）。如果一个`类有虚函数`，那么这个类的`实例化对象的内存首地址`就是虚函数表的地址，每个对象都有一个指针指向这个虚函数表。程序运行的时候，`基类指针`（此处必须是指针，非指针类型做不到多态）根据所指向的不同对象的虚函数表动态的选择所要运行的函数，从而实现多态性。  
 
 ### <span id = "list_5"></span>inline可以用虚函数实现吗  
   
@@ -880,3 +881,8 @@ this is destructor
 ### <span id = "list_23"></span>为什么拷贝构造函数的第一个参数必须是引用类型
 
 拷贝构造函数的第1个参数必须是引用类型。假如一个对象以`值传递`的方式传入拷贝构造函数，此时参数又做了一次拷贝构造，这样将引起无限循环导致栈溢出（函数调用，变量分配内存），所以说拷贝构造函数的参数必须是引用类型。  
+
+### <span id = "list_24"></span>overload与override区别  
+
+1. overload(重载)，重载要求函数名必须相同，但是参数类型、参数个数、参数顺序必须要有一个不同；如果只是仅仅返回值不同不能做为重载，重载是基于参数来实现的。
+2. override（重写），要求函数名、函数参数列表、返回值必须完全一样。C++中子类继承基类后可以重写基类的方法，重写的是虚函数可以实现多态，若`重写的不是虚函数没有多态的性质`。  
