--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -34,6 +34,7 @@ tags: 笔记
 - [C++什么时候用到拷贝构造函数](#list_22)
 - [为什么拷贝构造函数的第一个参数必须是引用类型](#list_23)
 - [overload与override区别](#list_24)
+- [STL中set的底层实现方式？为什么不用hash？](#list_25)
 
 --- 
 
@@ -885,4 +886,10 @@ this is destructor
 ### <span id = "list_24"></span>overload与override区别  
 
 1. overload(重载)，重载要求函数名必须相同，但是参数类型、参数个数、参数顺序必须要有一个不同；如果只是仅仅返回值不同不能做为重载，重载是基于参数来实现的。
-2. override（重写），要求函数名、函数参数列表、返回值必须完全一样。C++中子类继承基类后可以重写基类的方法，重写的是虚函数可以实现多态，若`重写的不是虚函数没有多态的性质`。  
+2. override（重写），要求函数名、函数参数列表、返回值必须完全一样。C++中子类继承基类后可以重写基类的方法，重写的是虚函数可以实现多态，若`重写的不是虚函数没有多态的性质`。
+
+### <span id = "list_25"></span>STL中set的底层实现方式？为什么不用hash？  
+
+set的`底层实现方式为红黑树`。内部实现中set不同于map是key-value对，它的`key和value是相同`的。内部是pairs键值对。利用红黑树的特点，set内部的元素是以结点来进行组织的，如果我们只是去判断某一个元素是不是在set里面，用hash可以O(1)时间做到，用红黑树需要O(logn)。但是更多时候我们利用set不是单单去查询某个数据，它`提供了多种集合间的操作交、并、差等`，这些操作红黑树有优势。  
+
+**c11新特性unordered_set**，unordered_set的底层是hashtable。
