--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -35,6 +35,7 @@ tags: 笔记
 - [为什么拷贝构造函数的第一个参数必须是引用类型](#list_23)
 - [overload与override区别](#list_24)
 - [STL中set的底层实现方式？为什么不用hash？](#list_25)
+- [链表和数组的区别](#list_26)
 
 --- 
 
@@ -892,4 +893,12 @@ this is destructor
 
 set的`底层实现方式为红黑树`。内部实现中set不同于map是key-value对，它的`key和value是相同`的。内部是pairs键值对。利用红黑树的特点，set内部的元素是以结点来进行组织的，如果我们只是去判断某一个元素是不是在set里面，用hash可以O(1)时间做到，用红黑树需要O(logn)。但是更多时候我们利用set不是单单去查询某个数据，它`提供了多种集合间的操作交、并、差等`，这些操作红黑树有优势。  
 
-**c11新特性unordered_set**，unordered_set的底层是hashtable。
+**c11新特性unordered_set**，unordered_set的底层是hashtable。  
+
+### <span id = "list_26"></span>链表和数组的区别  
+
+1. 内存分配：数组是连续的空间，声明时长度固定；链表是不连续的，且长度不固定  
+2. 查找效率：数组的查找O(1)；链表需从头到尾查找  
+3. 插入和删除效率：数组的插入需要移动数组元素效率低；链表可在O(1)的时间插入和删除
+4. 越界问题：数组会越界；链表不存在越界  
+
