--- a/_posts/2019-09-24-C++STL.md
+++ b/_posts/2019-09-24-C++STL.md
@@ -6,14 +6,57 @@ author: smakry
 tags: STL
 ---
 
-> STL    
+> 强大的C++模板类    
 
 ## 目录  
 
+- [标准模板库介绍](#list_0)
 - [仿函数](#list_1)
-- [C++set源码分析](#list_2)
+- [红黑树](#list_2)
+- [最大堆最小堆](#list_3)
+- [C++set源码分析](#list_3000)
 
 --- 
+
+### <span id = "list_0"></span>  
+STL（Standard Template Library，标注模板库），由惠普实验室开发的一序列软件的统称。STL是一种泛型编程（Generic Programing），`面向对象编程关注的是编程的数据方面`，而`泛型变成关注的是算法`。它们之前的共同点是`抽象`和创建`可重用代码`。STL的代码从广义上分为三类：`算法（Algorithm）`、`容器（Container）`和`迭代器（Iterator）`。几乎所有的代码都采用`模板类`和`模板函数`的方式，相比传统的函数和类组成的库更好的重用性。STL有六大组件：  
+
+1.容器：数据在`内存中的组织方式`，`内部实现一般是类`，容易类型：  
+- vector（向量）：底层数据结构`数组`，连续存储元素  
+- list（列表）：底层数据结构`双向链表`，每个节点包含一个元素
+- deque（双队列）：底层数据结构为一个`中央控制器和多个缓冲区`，内存分配也是一块连续的存储空间
+- stack（栈）：底层`一般用list或deque实现`  
+- queue（队列）：底层`一般用list或者deque实现`（stack和queue其实是适配器，而不是容器，这2个不使用vector实现是考虑到容量大小问题）  
+- priority_queue（优先队列）：底层数据结构`一般是vector为底层容器，堆heap为处理规则来管理底层容器实现`  
+- set（集合）：底层数据结构是`红黑树`，没有两个不同的元素能够拥有相同的次序
+- multiset（多重集合）：底层数据结构是`红黑树`，允许存在两个序列相等的元素的集合
+- map（映射）：底层数据结构为`红黑树`
+- multimap（多重映射）：底层数据结构为`红黑树`
+- hash_set（哈希集合）：底层数据结构`hash表`
+- hash_multiset（哈希多重集合）：底层数据结构`hash表`
+- hash_map（哈希映射）：底层数据机构`hash表`
+- hash_multimap（哈希多重映射）：底层数据结构为`hash表`  
+
+2.算法：应用在容器上以各种方法处理其内容的行为和功能，STL中算法是`模板函数表现`的（不是容器类的成员函数），算法部分主要由头文件<algorithm>、<numeric>和<functional>组成：  
+- <algorithm>:STL头文件最大的一个，由一大堆模板函数组成（比较、查找、遍历、反转、删除、修改等等）
+- <numeric>：只包括几个在序列上面进行`简单数据运算的模板函数`（包括加法和乘法在序列上的一些操作）
+- <functional>：定义了一些`模板类`，用以声明函数对象  
+
+3.迭代器：把容器和算法关联起来，是`指向容器中元素的普通指针`。迭代器主要由头文件<utility>、<iterator>和<memory>组成：  
+- <utility>：贯穿使用在STL中的几个模板的声明（`一大堆define`）  
+- <iterator>：提供迭代器使用的方法
+- <memory>：以不同寻常的方式`分配容器所需的存储空间`，也为某些算法执行期间产生的临时对象提供机制；<memory>主要的`模板类allocator`，负责产生所有容器中的默认分配器  
+
+4.仿函数：重载了“()”操作符的类或者结构体，使用起来类似函数  
+  
+5.适配器：主要是用来`修改其它组件接口`，STL提供三种适配器  
+- 容器适配器（可以理解为`由其它容器实现的容器`，如栈、队列）  
+- 迭代器适配器  
+- 仿函数适配器  
+  
+6.空间配置器：用来配置空间和管理空间，能够实现动态空间配置、空间管理、空间释放等。头文件<memory>  
+
+六大组件联系：空间配置置分配容器的存储空间，迭代器操作容器中数据，仿函数协助算法实现不同功能，适配器用来修改其它组件接口  
 
 ### <span id = "list_1"></span>仿函数  
 
@@ -75,6 +118,29 @@ int main(){
 <https://blog.csdn.net/K346K346/article/details/82818801>  
 <https://www.cnblogs.com/lutianba/archive/2013/05/18/3086287.html>
 
-### <span id = "list_2"></span>C++set源码分析  
+### <span id = "list_2"></span>红黑树（从头黑到底，一齐黑，红色儿子都是黑色的）  
+
+`横向`看树（层）
+满二叉树：除叶子节点外，每个节点都有左和右两个节点  
+完全二叉树：最后一层没满，其余层数节点都是满的2^(k-1)个，k为层（满二叉树是特殊的完全二叉树，反过来不一定成立）  
+
+`纵向`看树（竖）  
+平衡二叉树（AVL树，自平衡二叉树）：满足树的基本特性外，主要特性`左右子树的高度差不能超过1`。  
+红黑树：是`一种平衡的二叉查找树`（平衡即不是“瘸子”一长一短，优化查找性能，若一方特别长查找时间长），具有二叉树特性（左子树小于右子树）外还有以下特性：
+1.节点是红色或者黑色（定义上的颜色）  
+2.根节点是`黑色`（从头黑）  
+3.每个`叶子节点都是黑色的空节点`（NULL）（黑到底）  
+4.每个红色节点的两个子节点都是黑色（红色的儿子都是黑的）
+5.从任意节点到其每个叶子节点的所有路径都包含相同的黑色节点，此处包括空的黑节点（一`齐`黑）   
+
+![红黑树]() 
+
+### <span id = "list_3"></span>最大堆最小堆  
+
+堆是`特殊的完全二叉树`（除最后一层可能不满其余层都是满的）。  
+最大堆：上一层的节点都比下面的所有层数的节点`大`  
+最小堆：上一层的节点都比下面的所有层数的节点`小`  
+
+### <span id = "list_3000"></span>C++set源码分析  
 
 <https://www.jianshu.com/p/271e1ad10197>
