--- a/_posts/2019-09-24-C++STL.md
+++ b/_posts/2019-09-24-C++STL.md
@@ -133,7 +133,7 @@ int main(){
 4.每个红色节点的两个子节点都是黑色（红色的儿子都是黑的）
 5.从任意节点到其每个叶子节点的所有路径都包含相同的黑色节点，此处包括空的黑节点（一`齐`黑）   
 
-![红黑树]() 
+![红黑树](https://github.com/smakry/smakry.github.io/raw/master/imags/%E7%BA%A2%E9%BB%91%E6%A0%91.png) 
 
 ### <span id = "list_3"></span>最大堆最小堆  
 
