--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -36,6 +36,7 @@ tags: 笔记
 - [overload与override区别](#list_24)
 - [STL中set的底层实现方式？为什么不用hash？](#list_25)
 - [链表和数组的区别](#list_26)
+- [STL容器适配器理解](#list_27)
 
 --- 
 
@@ -901,4 +902,8 @@ set的`底层实现方式为红黑树`。内部实现中set不同于map是key-va
 2. 查找效率：数组的查找O(1)；链表需从头到尾查找  
 3. 插入和删除效率：数组的插入需要移动数组元素效率低；链表可在O(1)的时间插入和删除
 4. 越界问题：数组会越界；链表不存在越界  
+
+### <span id = "list_27"></span>STL容器适配器理解  
+
+[容器适配器](https://smakry.github.io/2019/09/24/C++STL.html "容器适配器")，`由其它容器实现的容器`，stack、queue和priority_queue这3个是容器适配器    
 
