--- a/_posts/2019-09-24-C++STL.md
+++ b/_posts/2019-09-24-C++STL.md
@@ -155,7 +155,7 @@ int main(){
 
 #### 解决哈希冲突方案  
 
-1.拉链法（Open Hashing）：在数组元素拉出一个链表用于存储相同key值对应不同的value值  
+1.**拉链法**（Open Hashing）：在数组元素拉出一个链表用于存储相同key值对应不同的value值  
 
 ![拉链法](https://github.com/smakry/smakry.github.io/raw/master/imags/%E6%8B%89%E9%93%BE%E6%B3%95.png)
 
@@ -168,7 +168,7 @@ int main(){
 
 - 链表分配空间，降低程序运行效率
 
-2.开地址法（Open Addressing）：相对于拉链法的Open Hashing，开地址法是Closed Hasing（hash表不再延伸拓展）。而是`继续顺延下去某个位置`来存放。常用的开地址法：  
+2.**开地址法**（Open Addressing）：相对于拉链法的Open Hashing，开地址法是Closed Hasing（hash表不再延伸拓展）。而是`继续顺延下去某个位置`来存放。常用的开地址法：  
 
 - 哈希桶（Bucket Hashing）    
 
@@ -186,7 +186,7 @@ int main(){
 
 - 探测（Probing）：从哈希函数获得key指向的位置开始，按照`一定的增长量`查找value（根据增长量的方式分为线性探测、平方探测、伪随机探测（真随机可能出现探测不到的情况））  
     
-3.双重散列（Double Hashing）：建立多个哈希函数，第1次哈希出现冲突再次用`另外的`哈希函数散列
+3.**双重散列**（Double Hashing）：建立多个哈希函数，第1次哈希出现冲突再次用`另外的`哈希函数散列
 
 <https://www.jianshu.com/p/dbe7a1ea5928>
 
