--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -20,6 +20,7 @@ tags: 笔记
 - [友元类友元函数](#list_8)
 - [C++多态的概念和实现机制](#list_9)
 - [虚函数是如何实现多态机制](#list_16)
+- [构造函数和虚构函数能否为虚函数](#list_29)
 - [堆栈的区别](#list_10)
 - [sizeof和strlen区别](#list_11)
 - [C的malloc和C++的new的区别](#list_12) 
@@ -37,6 +38,8 @@ tags: 笔记
 - [STL中set的底层实现方式？为什么不用hash？](#list_25)
 - [链表和数组的区别](#list_26)
 - [STL容器适配器理解](#list_27)
+- [C++如何避免野指针](#list_28)
+
 
 --- 
 
@@ -907,3 +910,15 @@ set的`底层实现方式为红黑树`。内部实现中set不同于map是key-va
 
 [容器适配器](https://smakry.github.io/2019/09/24/C++STL.html "容器适配器")，`由其它容器实现的容器`，stack、queue和priority_queue这3个是容器适配器    
 
+### <span id = "list_28"></span>C++如何避免野指针  
+
+野指针指那些`指向被释放`或者`访问受限制内存`的指针。野指针产生的原因及应对：  
+
+1.指针变量`没有初始化`：指针创建时没有初始化会指向一个随机地址，这种情况的指针要初始化  
+2.`指向释放后的内存`：指针指向的内存被释放了，但是指针没有置为NULL此时指针还被看做是合法的，这种情况的释放后要置NULL（例如delete或者free释放的内存）  
+3.指向了`作用范围外`的内存：例如函数调用栈里面的指针，函数调用结束栈即被释放，外面指针指向函数栈的指针即超出了范围  
+
+### <span id = "list_29"></span>构造函数和虚构函数能否为虚函数  
+
+1.构造函数不可以是虚函数：虚函数要求每个对象都有指向虚函数表的指针，对象都还没有被构造好就存在这个指针  
+2.析构函数可以是虚函数：当基类指针指向了子类对象，如果析构函数不是虚函数，那么此时释放的只是基类的内存，无法调用到子类的析构函数，子类内存无法释放，此时出现内存泄露
