--- a/_posts/2019-09-22-编程思维.md
+++ b/_posts/2019-09-22-编程思维.md
@@ -12,6 +12,7 @@ tags: 方法论
 
 - [动态规划的思想](#list_1)
 - [类兔乌龟赛跑思路](#list_2)
+- [不使用第3变量交换2个值](#list_3)
 
 --- 
 
@@ -94,3 +95,48 @@ int main(){
 3.给定一个链表，求这个链表的中间节点  
 
 两个指针，一个走2步一个走1步，当快的下一步是空时候（表示链表结束），慢的指针指向的即链表中间。  
+
+### <span id = "list_3"></span>不使用第3变量交换2个值  
+
+1.**差值计算**：计算A、B两者之间的差值（“河”宽），交易“河”宽达成你我互换。例如：  
+
+```cpp  
+int A = 11;
+int B = 23;
+
+A = A - B;  //A比B多出来的宽
+B = B + A;  //B加上A多出来的宽就变成了B
+A = B - A； //如今的B（已经是原来的A的大小）减去原来A比B多出来的宽就是原来B的值
+
+```  
+
+2.指针地址计算：利用指针a + 10（表示以a为基地址在a后10个a类数据单元的地址），之后同1的方法，但需注意在转化过程数据类型的精度跟操作系统寻址有关，且地址操作不能出现负数，例如：  
+
+````cpp  
+#include<iostream>
+
+int main() {
+	long int *a = new long int(10);  //long int的原因是int不能表示64位寻址地址
+	long int *b = new long int(20);
+
+	if (a > b) {  //地址不出现负数
+		a = (long int*)(a - b);
+		b = (long int*)(b + (long int)a);
+		a = (long int*)(b - (long int)a);
+	}
+	else {
+		b = (long int*)(b - a);
+		a = (long int*)(a + (long int)b);
+		b = (long int*)(a - (long int)b);
+	}
+
+	std::cout << *a << " " << *b << std::endl;
+
+	getchar();
+
+	return 0;
+}
+
+````
+
+
