--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -39,6 +39,13 @@ tags: 笔记
 - [链表和数组的区别](#list_26)
 - [STL容器适配器理解](#list_27)
 - [C++如何避免野指针](#list_28)
+- [指针和引用的区别](#list_30)
+- [this指针有什么用](#list_31)
+- [static关键字有几种用途](#list_32)
+- [如果叫你设计函数strcpy需要考虑哪些问题](#list_33)
+- [二叉树如何保存到文件中可以恢复二叉树](#list_34)
+- [函数参数传递相关](#list_35)
+- [C++程序中调用被C语言编译过的函数，为什么要加extern "C"](#list_36)
 
 
 --- 
@@ -921,4 +928,194 @@ set的`底层实现方式为红黑树`。内部实现中set不同于map是key-va
 ### <span id = "list_29"></span>构造函数和虚构函数能否为虚函数  
 
 1.构造函数不可以是虚函数：虚函数要求每个对象都有指向虚函数表的指针，对象都还没有被构造好就存在这个指针  
-2.析构函数可以是虚函数：当基类指针指向了子类对象，如果析构函数不是虚函数，那么此时释放的只是基类的内存，无法调用到子类的析构函数，子类内存无法释放，此时出现内存泄露
+2.析构函数可以是虚函数：当基类指针指向了子类对象，如果析构函数不是虚函数，那么此时释放的只是基类的内存，无法调用到子类的析构函数，子类内存无法释放，此时出现内存泄露  
+
+### <span id = "list_30"></span>指针和引用的区别  
+
+指针是指向内存块的一个变量；引用为变量的“别名”（“绰号”），如果变量都不存在怎么会有“别名”：  
+
+1. 指针本质是一个`变量`，变量存储的是内存的某一个地址；引用本质是一个别名，只是原来对象的一个别名，在内存中是同一个存储单元  
+2. 指针是变量，变量的值就可以`随时改变`；引用是一个变量的别名初始化之后就不`能改变引用的关系`（是指不能变成另外一个变量的引用，而能改变当前引用对象的值）  
+3. `指针可以为NULL`；但是`引用不能为NULL`，并且定义后就要初始化（没有对象别名没有意义）  
+4. 指针和引用作为参数传递时候的也有差别：  
+传递指针，若改变了指针指向的地址，那么实参的值被改变了（`地址和地址的值都会被变化`）；传递引用，只会改变实参的值（`地址的值会改变，地址不会改变`）  
+
+### <span id = "list_31"></span>this指针有什么用？  
+
+1. this指针本质是指向对象的一个指针，每一个对象都有一个对应的this指针  
+2. this指针并不是对象的一部分，不会占用对象的内存。每个对象在内存中都有一个首地址（就是对象的地址），this指针`不是一个指针变量`只是在用到的时候`隐含的传递过去`。  
+3. this指针作用类的内部，当对象调用类的非静态成员函数时，编译器会把this指针`隐含的作为参数`传递过去（`静态成员或静态成员函数属于类，不属于某一个对象，也就没有this指针`。同样friend友元函数同样是没有this指针）  
+
+this指针的用法：  
+可以用this指针访问类的非静态成员（包括非静态成员函数）  
+如果非静态成员函数要返回一个对象本身的引用，可以用*this  
+
+### <span id = "list_32"></span>static关键字有几种用途（在范围内实现全局）  
+
+static告知编译器，变量存储在程序的静态存储区域而非栈空间上（即`编译时即分配了空间`，不是在运行是分配），static必须初始化（只执行一次初始化，类的静态成员只能在类外初始化），默认是0，需区别const变量static变量的值是可以修改的。static修饰变量的时候，其它文件是`不能通过extern访问`到的。静态局部变量`仍然受对应的作用域限制`。`类的静态成员和静态方法是属于类`，不属于任何对象，但又是类的成员跟方法，所以可以通过类对象访问，也可以通过类本身访问。  
+
+```cpp 
+#include<iostream>
+
+class A{
+public:
+    A(int data):m_data(data){}
+    static void print();
+    static int a;  //此处只能是声明，不能定义及初始化
+
+private:
+    int m_data;
+};
+
+int A::a = 15;  //成员变量，且无需再static
+
+void A::print(){
+    std::cout << "hello world " << std::endl;
+}
+
+int main(){
+    A a = A(3);
+    a.print();  //print是成员方法可以通过对象访问
+    A::print();   //print是类共有的，可以通过类名作用域访问
+
+    std::cout << A::a << " " << a.a << std::endl;
+    return 0;
+}
+
+```  
+
+1.**拓展生命期**：声明为static的局部变量的生存期不再是当前作用域，而是`整个程序的生存期`。static变量不管是局部还是全局都存放在全局数据区(静态存储区)，static变量只会初始化一次   
+
+2.**限制作用域**：普通的全局变量和函数，其作用域为整个程序或者项目，外部文件可以通过extern关键字访问该变量和函数。static的变量和函数的`作用域只有当前文件`（但文件被include的头文件中的变量和函数声明就被包含到一份文件里面了），其它文件不能访问到（不同文件就可以声明一样的静态变量）。  
+
+3.**唯一性**：C++中类的static成员变量和static成员函数是`属于类，不属于任意一个对象`，所有对象共享。static成员变量必须在类外定义且只能被初始化一次。static又是类的成员跟方法，所以可以通过类对象访问，也可以通过类本身访问（只属于类）。static函数只能访问static的成员及函数，不能方位非static的成员或函数（static在编译期，在有对象之前，同时static是没有隐藏的this指针）。  
+
+### <span id = "list_33"></span>如果叫你设计函数strcpy需要考虑哪些问题  
+
+函数的原型为char* strcpy(char* des,const char * src),作用是把src字符串复制给des。需要注意的问题：  
+
+1. 两个形参src和des是否会为NULL
+2. des和src会不会出现内存重叠（内存重叠：拷贝的目的地址在源地址范围内，目的地址和源地址有重叠部分）  
+3. des是否能够容纳下src
+4. 无法正常复制，应该抛出什么异常  
+
+### <span id = "list_34"></span>二叉树如何保存到文件中可以恢复二叉树  
+
+利用二叉树的层次遍历和深度遍历。  
+
+- 层次遍历：每一层都是2^(n-1)个数据，利用这个特性对每个节点编号，例如根节点是n，那么左子树跟节点是2n，右节点是2n+1
+- 深度遍历：保存二叉树的前序遍历和中序遍历（这2个可以唯一确认一颗二叉树，有后续遍历的不能唯一确认）  
+
+### <span id = "list_35"></span>函数参数传递相关  
+
+函数参数传递的三种方式：值传递、指针传递、传引用  
+1.**值传递**：形参完全拷贝实参，是两个不同的地址，形参不会对实参产生影响  
+
+2.**指针传递**：对于指针本身是一个独立的地址空间，而形参指针和实参指针指向的地址是一样的。当形参改变了地址`指向的值`则影响了实参，但如果只是改变了`指针指向的地址`（指向新的地址）不影响实参  
+
+3.**传引用**：引用是变量的别名，形参和实参其实是一个实体，改变其中一个就是改变这个实体  
+
+### <span id = "list_36"></span>C++程序中调用被C语言编译过的函数，为什么要加extern "C"  
+
+C++支持`函数重载`，C语言不支持函数重载。C++编译器编译后函数名不同于原函数名（不同编译器不同，不过基本上都是函数名带参数列表写到编译后的名字如：_fun_int_int），而C语言编译后是不会带参数的，所以C++提供了`extern "C"来解决名字不相符问题`（"C"表示的是C语言，可能有其它的语言）:  
+
+1.extern可以单一语句：   
+
+	extern "C" int func(int);  
+
+2.可以复合语句：  
+
+	extern "C" {  
+		int min(int,int);  
+		double max(double,double);  
+	}  
+
+3.可以包含头文件，相当于头文件中的声明都加了extern "C"  
+
+	extern "C" {
+		#include<cmath>   //cmath里面的所有声明都加了extern "C"  
+	} 
+
+4.不可以将extern "C" 添加在函数内部  
+
+5.如果函数有多个声明，可以都加extern "C", 也可以只出现在第一次声明中，后面的声明会接受第一个链接指示符的规则  
+
+<https://blog.csdn.net/scyatcs/article/details/82899757>  
+
+```cpp
+//hello.h C语言头文件
+#ifndef _HELLO_H
+#define _HELLO_H
+
+	#include<stdio.h>
+
+	int mymax(int, int);
+	int mymin(int, int);
+	int myplus(int, int);
+
+#endif
+
+
+//hello.c C语言源文件
+#include "hello.h"
+
+int mymax(int a, int b) {
+	return a > b ? a : b;
+}
+
+int mymin(int a, int b) {
+	return a > b ? b : a;
+}
+
+int myplus(int a, int b) {
+	return a + b;
+}
+
+
+//test.h C++头文件
+#ifndef _cplusplus //定义宏表示这是C++文件（此处仅用于区分）
+#define _cplusplus
+#endif
+
+#ifndef _TEST_H //定义宏防止重复引用
+#define _TEST_H
+
+#ifdef _cplusplus
+extern "C" { //复合语句
+#endif
+	int mymin(int, int);
+	#include<stdlib.h>  //stdlib中声明都加了extern "C
+#ifdef _cplusplus
+	}
+#endif
+
+#ifdef _cplusplus
+extern "C" int mymax(int, int);
+#endif
+
+#include<iostream>
+
+#endif
+
+
+//test.cpp C++源文件
+#include "test.h"
+
+extern "C" int myplus(int, int);
+
+void testextern() {
+	std::cout << myplus(11, 22) << std::endl;
+}
+
+extern "C" int myplus(int, int); //extern "C"多次出现跟只有1次是一样的
+
+void main()
+{
+	//extern "C" int myplus(int, int);  //不能添加在函数内部
+	std::cout << mymin(11, 34) << std::endl;
+	
+	testextern();
+
+	getchar();
+}
+```
