--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -46,6 +46,8 @@ tags: 笔记
 - [二叉树如何保存到文件中可以恢复二叉树](#list_34)
 - [函数参数传递相关](#list_35)
 - [C++程序中调用被C语言编译过的函数，为什么要加extern "C"](#list_36)
+- [什么是深拷贝，什么是浅拷贝](#list_37)
+- [动态数组及二维数组](#list_38)
 
 
 --- 
@@ -212,7 +214,7 @@ int main(){
 
 ### <span id = "list_16"></span>虚函数是如何实现多态机制  
 
-多态机制的实现主要是通过子类重写基类的虚函数来实现的，而虚函数的实现机制则是通过一张虚函数表（<https://blog.csdn.net/qican_7/article/details/100603461>）。如果一个`类有虚函数`，那么这个类的`实例化对象的内存首地址`就是虚函数表的地址，每个对象都有一个指针指向这个虚函数表。程序运行的时候，`基类指针`（此处必须是指针，非指针类型做不到多态）根据所指向的不同对象的虚函数表动态的选择所要运行的函数，从而实现多态性。  
+多态机制的实现主要是通过子类重写基类的虚函数来实现的，而虚函数的实现机制则是通过一张虚函数表（<https://blog.csdn.net/qican_7/article/details/100603461>）。如果一个`类有虚函数`，那么这个`类的实例化对象的内存首地址`就是虚函数表的地址，每个对象都有一个指针指向这个虚函数表。程序运行的时候，`基类指针`（此处必须是指针，非指针类型做不到多态）根据所指向的不同对象的虚函数表动态的选择所要运行的函数，从而实现多态性。  
 
 ### <span id = "list_5"></span>inline可以用虚函数实现吗  
   
@@ -334,6 +336,9 @@ int main(){
 - 存储内容：
     - 栈：主要用于存储运行时候的局部变量、参数、地址等
     - 堆：主要储存new出来的数据类型等  
+- 申请大小的限制：
+    - 栈：栈是向低地址扩展的，是一块连续内存区域。因为栈的最大容量已经预先规定好了，容量有限  
+    - 堆：堆是向高地址扩展，不连续的内存区域。系统利用链表来存储空闲地址空间，堆所能申请的内存空间较大  
 
 ### <span id = "list_11"></span>sizeof和strlen的区别
 
@@ -1118,4 +1123,70 @@ void main()
 
 	getchar();
 }
+```  
+
+### <span id = "list_37"></span>什么是深拷贝，什么是浅拷贝  
+
+1.**浅拷贝**：对象在拷贝的时候，只是简单的一一赋值，当对象中存在动态分配内存（堆中的内存），此时拷贝只是把地址赋值过去，指向的内存空间是一样的，默认拷贝构造函数就是浅拷贝。  
+
+2.**深拷贝**：相对于浅拷贝对动态分配的内存也重新分配一块地址空间，指向的是不同的内存空间（重写拷贝构造函数的主要目的）  
+
+### <span id = "list_38"></span>动态数组及二维数组  
+
+`new和delete配对，new[]和delete[]配对`。此时的new跟类的new是一致的，可用默认构造初始化。
+
+```cpp
+#include<iostream>
+
+int main() {
+	int a1[3][3] = { 0 }; //所有元素初始化为0
+	std::cout << "a1:\t" << a1[2][2] << std::endl;
+
+	int(*a2)[3] = new int[3][3]; //声明的指针数组，并限制每个指针指向的长度3，此时一次性分配了堆内存
+	a2[2][2] = 11;
+	std::cout << "a2:\t" << *(*(a2 + 2) + 2) << std::endl; //首地址偏移到第3行的地址，再偏移到第3列的地址取值
+	std::cout << "a2_2:\t" << *(*a2 + 8) << std::endl;  //a2分配的是连续的，此时可通过加8个相同类型取到最后一个元素a2[2][2]
+	delete[]a2; //数组delete必须带“[]”且在指针前面
+
+	int* a3 = new int(15);
+	std::cout << "a3:\t" << *a3 << std::endl;
+	delete a3; //释放的是对象，不需要“[]”
+
+	int** a4 = new int*[3]; //a4是指向指针的指针，同a2一个意思，但下面a4是分多次分配内存的（此时堆内存可能不连续）
+	int*a5;
+	for (int i = 0; i < 3; ++i) {
+		a5 = new int[3];
+		printf("a5:\t%d\n", a5);
+		a4[i] = new int[3];
+
+		printf("a4[%d]:\t%d\n", i,a4[i]);
+	}
+	delete a5; //a5在循环内连续分配了3次内存，但只释放了最后1次的，此时会造成内存泄露
+	a4[2][2] = 100;
+	std::cout << "a4:\t" << *(*(a4 + 2) + 2) << std::endl; //首地址偏移到第3行的指针（行指针存在连续的内存），再偏移到第3列的地址取值（列也是在连续的内存地址）
+	std::cout << "a4_2:\t" << *(*a4 + 8) << std::endl; //分多次分配内存地址，不能通过多个相同的类型的方式访问
+	for (int i = 0; i < 3; ++i) {
+		delete[] a4[i]; //多次分配内存，就要多次释放内存
+	}
+	delete[] a4;
+
+	return 0;
+}
+
+
+/*输出结果
+a1:     0
+a2:     11
+a2_2:   11
+a3:     15
+a5:     4153328
+a4[0]:  4153648
+a5:     4153728
+a4[1]:  4153808
+a5:     4153888
+a4[2]:  4153968
+a4:     100
+a4_2:   4153600
+*/
+
 ```
