--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -1136,35 +1136,43 @@ void main()
 `new和delete配对，new[]和delete[]配对`。此时的new跟类的new是一致的，可用默认构造初始化。
 
 ```cpp
+#include "test.h"
 #include<iostream>
 
 int main() {
 	int a1[3][3] = { 0 }; //所有元素初始化为0
 	std::cout << "a1:\t" << a1[2][2] << std::endl;
 
-	int(*a2)[3] = new int[3][3]; //声明的指针数组，并限制每个指针指向的长度3，此时一次性分配了堆内存
+	int(*a2)[3] = new int[3][3]; //声明的指针数组，并限制每个指\\
+								 针指向的长度3，此时一次性分配了堆内存
 	a2[2][2] = 11;
-	std::cout << "a2:\t" << *(*(a2 + 2) + 2) << std::endl; //首地址偏移到第3行的地址，再偏移到第3列的地址取值
-	std::cout << "a2_2:\t" << *(*a2 + 8) << std::endl;  //a2分配的是连续的，此时可通过加8个相同类型取到最后一个元素a2[2][2]
+	std::cout << "a2:\t" << *(*(a2 + 2) + 2) << std::endl; //首地址偏移到第3行的地址，\\
+														   再偏移到第3列的地址取值
+	std::cout << "a2_2:\t" << *(*a2 + 8) << std::endl;  //a2分配的是连续的，此时可通过加8\\
+														个相同类型取到最后一个元素a2[2][2]
 	delete[]a2; //数组delete必须带“[]”且在指针前面
 
 	int* a3 = new int(15);
 	std::cout << "a3:\t" << *a3 << std::endl;
 	delete a3; //释放的是对象，不需要“[]”
 
-	int** a4 = new int*[3]; //a4是指向指针的指针，同a2一个意思，但下面a4是分多次分配内存的（此时堆内存可能不连续）
+	int** a4 = new int*[3]; //a4是指向指针的指针，同a2一个意思，\\
+							但下面a4是分多次分配内存的（此时堆内存可能不连续）
 	int*a5;
 	for (int i = 0; i < 3; ++i) {
 		a5 = new int[3];
 		printf("a5:\t%d\n", a5);
 		a4[i] = new int[3];
 
-		printf("a4[%d]:\t%d\n", i,a4[i]);
+		printf("a4[%d]:\t%d\n", i, a4[i]);
 	}
-	delete a5; //a5在循环内连续分配了3次内存，但只释放了最后1次的，此时会造成内存泄露
+	delete a5; //a5在循环内连续分配了3次内存，但只释放了最后1次的，\\
+			   此时会造成内存泄露
 	a4[2][2] = 100;
-	std::cout << "a4:\t" << *(*(a4 + 2) + 2) << std::endl; //首地址偏移到第3行的指针（行指针存在连续的内存），再偏移到第3列的地址取值（列也是在连续的内存地址）
-	std::cout << "a4_2:\t" << *(*a4 + 8) << std::endl; //分多次分配内存地址，不能通过多个相同的类型的方式访问
+	std::cout << "a4:\t" << *(*(a4 + 2) + 2) << std::endl; //首地址偏移到第3行的指针（行指针存在连续的内存），\\
+														   再偏移到第3列的地址取值（列也是在连续的内存地址）
+	std::cout << "a4_2:\t" << *(*a4 + 8) << std::endl; //分多次分配内存地址，\\
+													   不能通过多个相同的类型的方式访问
 	for (int i = 0; i < 3; ++i) {
 		delete[] a4[i]; //多次分配内存，就要多次释放内存
 	}
