--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -328,8 +328,8 @@ int main(){
 ### <span id = "list_10"></span>堆栈的区别  
 
 - 分配方式和回收方式的区别：  
-    - 栈：由系统自动分配，并且在声明周期结束后系统自动回收
-    - 堆：手动申请（例如new和malloc），释放需要手动释放（例如delete和free），如未释放会导致内存泄露  
+    - 栈：由系统自动分配，并且在声明周期结束后系统自动回收（栈能分配的大小固定且一般较小）
+    - 堆：手动申请（例如new和malloc），释放需要手动释放（例如delete和free），如未释放会导致内存泄露（堆的内存分配机制是通过链表来分配，内存不连续）  
 - 申请效率：  
     - 栈：由系统分配，速度较快，效率高
     - 堆：手动申请一般比较慢，且容易产生内存碎片  
@@ -379,8 +379,12 @@ arry2:44
 ### <span id = "list_12"></span>C的malloc和C++的new的区别  
 
 malloc/free和new/delete都可以用来动态分配内存  
-- malloc/free是C语言用来动态分配内存和释放的`函数`，malloc向堆申请一块内存，成功`返回void指针`（void*表示不确定类型的指针，可以强制转化），这块内存不使用时通过free释放，并把指向这块内存的指针设为NULL  
-- new/delete是C++用来为某一个数据类型对象分配内存的`操作符`，可以被重载。new从堆申请内存成功后返回`指向具体数据类型的指针`。new在为类对象申请内存空间会去调用类的构造函数，在delete释放会调用析构函数  
+- malloc/free是C语言用来动态分配内存和释放的`函数`（需要库文件#include<stdlib.h>），malloc向堆申请一块内存，malloc需要`手动计算字节数`，成功`返回void指针`（void*表示不确定类型的指针，可以强制转化），这块内存不使用时通过free释放，并把指向这块内存的指针设为NULL  
+- new/delete是C++用来为某一个数据类型对象分配内存的`操作符`，可以被重载。new从堆申请内存成功后返回`指向具体数据类型的指针`，new可以`自动计算`需要分配的内存空间。new在为类对象申请内存空间会去调用类的构造函数，在delete释放会调用析构函数
+
+#### 用new创建，用free回收会产生什么影响？  
+  
+比如string *str;new 一个string，用free会释放str指向的内存，但是不会调用析构函数，string字符串类，里面不仅仅有数据，还有函数成员变量，这些内存地址没有被析构，而使用delete会调用对应的析构函数，把这些内存完全释放。  
 
 ### <span id = "list_13"></span>strcpy和memcpy区别  
 
